TODO: Fix register component on small device

--- a/projects/ngrx-app/src/app/features/auth/register/register.component.scss
+++ b/projects/ngrx-app/src/app/features/auth/register/register.component.scss
@@ -1,15 +1,14 @@
 #auth-register {
 	padding: 20px 0px;
-}
-
-.content {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
+}
 
+.content {
 	&.card {
-		width: auto;
+		width: 77%;
     height: auto;
     padding: 20px 40px;
 	}
