--- a/projects/ngrx-app/src/styles/_app.style.scss
+++ b/projects/ngrx-app/src/styles/_app.style.scss
@@ -86,13 +86,21 @@ body {
 	}
 
 	&.title {
-		font-weight: 300;
+		display: flex;
+		place-items: center;
 		padding: 0px 20px;
 		margin-bottom: 20px;
+		font-size: 25px;
+		font-weight: 300;
 		border-radius: 20px !important;
 		border: 1px solid #959595;
-		// font-size: inherit !important;
-		// line-height: normal !important;
+	
+		mat-icon {
+			margin-left: -10px !important;
+			margin-right: 5px !important;
+			height: 25px !important;
+			width: 25px !important;
+		}
 	}
 }
 
